# RUST_PURO_COLLEGA_ACCESS

./: README.md
archivi_mdb/: ODBC_25_PIANTA_ORGANICA.dsn  PRES3000_N25_PIANTA_ORGANICA.ldb
cmd_collega_access/: .gitignore  Cargo.sublime-workspace  File_Dipendenti_campo_memo.csv  File_Dipendenti_senza_campo_memo.csv  File_Dipendenti_tutto.csv  PRES3000_N25_PIANTA_ORGANICA.ldb  Project_CMD_COLLEGA_ACCESS.sublime-workspace  Project_COLLEGA_ACCESS.sublime-workspace
cmd_collega_access/src/: MAIN_ORIGINALE_.md  MAIN_RIFATTO_GIACOMO_ErroreObdc.rs  README.md  main.rs  progetto-rust-tauri.sublime-project  progetto-rust-tauri.sublime-workspace
html_collega_access/: .gitignore  Cargo.toml  Project_HTML_COLLEGA_ACCESS.sublime-workspace
html_collega_access/originali/: Cargo_FUNZIONANTE.md  main_FUNZIONANTE.md
html_collega_access/src/: main.rs
prova_connessione/: Cargo.toml  Project_Prova_connessione.sublime-project  Project_Prova_connessione.sublime-workspace
prova_connessione/Originali/: Cargo_ORIGINALE.md  main_ORIGINALE.md
prova_connessione/src/: main.rs
