[package]
name = "html_collega_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
env_logger = "0.10"
odbc = "0.17"
odbc-safe = "0.5.0" # aggiorno con questo comando: cargo add odbc-safe
tokio={version = "1", features = ["full"]}
webbrowser = "0.5"

